--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <meta property="og:image" content="https://k.top4top.io/p_20648gkga1.jpg">
     <link rel="icon" href="https://k.top4top.io/p_20648gkga1.jpg">
     <link rel="shortcut icon" href="https://k.top4top.io/p_20648gkga1.jpg">
-    <title>Aqul Uploader</title>
+    <title>Fatih Uploader</title>
 </head>
 
 <body>
-    <h1>Single Upload by Aqulzz</h1>
+    <h1>Uploader Fatih Arridho</h1>
     <form action="/upload" method="POST" enctype="multipart/form-data">
         <div>
             <label>Select File :</label><br>
@@ -23,7 +23,7 @@
         <button style="margin-top: 1rem">Upload</button>
     </form>
     <br>
-    <h2>Multi Upload by Aqulzz</h2>
+    <h2>Multi Upload by Fatih Arridho</h2>
     <form action="/multi-upload" method="POST" enctype="multipart/form-data">
         <div>
             <label>Pilih gambar</label> <br>
