--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>Uploader Fatih Arridho</h1>
+    <h1>Single Upload</h1>
     <form action="/upload" method="POST" enctype="multipart/form-data">
         <div>
             <label>Select File :</label><br>
@@ -23,7 +23,7 @@
         <button style="margin-top: 1rem">Upload</button>
     </form>
     <br>
-    <h2>Multi Upload by Fatih Arridho</h2>
+    <h2>Multi Upload</h2>
     <form action="/multi-upload" method="POST" enctype="multipart/form-data">
         <div>
             <label>Pilih gambar</label> <br>
