--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Simple Uploader using express.js by Fatih Arridho">
+    <meta name="description" content="Simple Uploader using express.js by David">
     <meta property="og:image" content="https://fatiharridho.my.id/assets/@fatiharridho.jpg">
     <link rel="icon" href="https://fatiharridho.my.id/assets/@fatiharridho.jpg">
     <link rel="shortcut icon" href="https://fatiharridho.my.id/assets/@fatiharridho.jpg">
-    <title>Fatih Uploader</title>
+    <title>David Uploader</title>
 </head>
 
 <body>
