--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Simple Uploader using express.js by David">
     <meta property="og:image" content="https://fatiharridho.my.id/assets/@fatiharridho.jpg">
     <link rel="icon" href="https://fatiharridho.my.id/assets/@fatiharridho.jpg">
-    <link rel="shortcut icon" href="https://fatiharridho.my.id/assets/@fatiharridho.jpg">
+    <link rel="shortcut icon" href="https://telegra.ph/file/6bae97cb104c4cbc31d91.jpg">
     <title>David Uploader</title>
 </head>
 
